2386 [AVS Script Creator] changed default mod value to 8
2385 [VideoEncodingComponent] added FrameRate information concerning external JobMuxer
2384 [MediaInfo] added Bits Depth information in the log
2383 [Audio Encoder] Add TimeStretch support. Feature Request #493 
2382 [x264] Force to use external mp4 muxer because the current x264 build doesn't have the mp4 support
2381 [x264] introduced external muxer job feature for the x264 encoder (only MKV & MP4). Can be enabled/disabled through the MeGUI settings. 
2380 [AVS Script Creator] fixed a crash when opening first a smaller and then a bigger input file
2379 [Audio Encoder] Added 32000 Hz as Sample Rate. Feature Request #518
2378 [OneClick] A_MS/ACM (PCM) audio tracks in MKV files will be extracted with eac3to
2377 [QAAC] added "no delay" feature
2376 [Log] changed format of some date/times
2375 [OneClick] fixed anamorphic encodings (regression of 2357) 
2373 [MP4 Muxer] default GPAC string will be erased
2372 [MP4 Muxer] added TTXT Subtitles Files support. Feature request #437
2370 [OneClick] fixed "close after Go!" in batch mode
2369 [x264] disabled direct mp4 output as the official builds do not have this support enabled
2368 [OneClick] fixed internal chapters wrongly detected in VOB files
                enhanced logging
2367 [MainForm] show avs script errors. Feature request #513
2366 [Opus] raised default bitrate to 96 Kbps
2365 [x264] allow max bitrate up to 300000 Kbps instead of 100000 Kbps
2364 [Opus] allow max bitrate up to 512 Kbps. Feature request #512
2363 [OneClick] added option to set a language by default if it cannot be determined
2362 [Chapter Creator] automatically preselect chapter file name
2361 [AVS Script Creator] fixed not possible to change the height (regression of 2357)
2360 [OneClick] fixed using a resolution of 16x16 or lower in some cases (regression of 2357)
2359 [OneClick] fixed adding only the first track when using File\Open in the MainForm. Bug #724